--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -5,7 +5,6 @@
     android:layout_height="match_parent"
     android:background="@mipmap/fondo">
 
-
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
@@ -35,7 +34,6 @@
     <EditText
         android:id="@+id/usuario"
         android:layout_width="match_parent"
-
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
         android:background="@color/white"
@@ -69,7 +67,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Iniciar Sesion"
-        android:visibility="gone"
+        android:backgroundTint="@color/gris"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
