--- a/app/src/main/res/layout/pantallafinal.xml
+++ b/app/src/main/res/layout/pantallafinal.xml
@@ -9,22 +9,21 @@
         android:id="@+id/tvFinal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintVertical_bias="0.3"
-        android:textSize="40sp"
-        android:gravity="center"
         android:layout_margin="50sp"
+        android:gravity="center"
+        android:textColor="@color/white"
+        android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:textColor="@color/white">
-    </TextView>
+        app:layout_constraintVertical_bias="0.3"></TextView>
 
     <Button
         android:id="@+id/siguiente"
-        android:text="Intentarlo de nuevo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Intentarlo de nuevo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
